# ocp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
app/: readme.md
app/boost/: Buck_Boost_Pynq_Signals.txt  boostConfig.h  boostControlEnergyInt.c  boostControlEnergyMpc.c  boostControlEnergyMpc.h  boostControlEnergycint.c  boostController.c  boostController.h  boostHw.c  boostHwIf.c  boostHwIf.h  boostHwOpil.c  boostOpil.c
app/boost/config/: stypesBoost.h
app/buck/: buckConfig.h  buckControlDisabled.h  buckControlSfbInt.c  buckControlSfbInt.h  buckControlStartup.c  buckControlStartup.h  buckController.c  buckController.h  buckHw.c  buckHw.h  buckHwIf.c  buckHwIf.h
app/cuk/: cuk.c  cukConfig.h  cukControlEnergy.c  cukControlEnergy.h  cukControlEnergyInt.c  cukControlEnergyInt.h  cukControlEnergyMpc.c  cukControlEnergyMpc.h  cukControlRamp.c  cukControlSfb.c  cukControlSfb.h  cukControlSfbInt.c  cukControlStartup.c  cukController.c  cukController.h  cukHw.c  cukHwIf.c  cukHwOpil.c  cukOpil.c
app/example_controller/: CMakeLists.txt  app.c  buck.py  main.c  python_ex_controller.py  python_ex_template.py  readme.md
app/example_controller/app/: CMakeLists.txt  app.c  appController.c  appController.h  appHw.c  appOpil.c
app/example_controller/plecs/: buck_opil.plecs  makefile
app/example_controller/plecs/old/: opil_buck.plecs  opil_plecs_linux.c
app/example_controller/threads/: CMakeLists.txt  ocpIfThread.c  ocpIfThread.h  ocpIfWinThread.c  ocpOpilThread.c
app/example_intro/: CMakeLists.txt  appHw.c  ocpIfThread.c  python_ex_template.py  readme.md
app/example_multiple_controllers/: CMakeLists.txt  buck.py  main.c  python_ex_controller.py  python_ex_multiple_controllers.py  readme.md
app/example_multiple_controllers/app/: CMakeLists.txt  app.c  appConfig.h  appController.c  appControllerCascaded.c  appControllerCascaded.h  appControllerSfb.c  appHw.h  appOpil.h
app/example_multiple_controllers/buck/: __init__.py  controllers.py  iface.py  trace.py
app/example_multiple_controllers/plecs/: buck_opil.plecs  makefile  opil_plecs_linux.c
app/example_multiple_controllers/threads/: CMakeLists.txt  ocpIfThread.c  ocpOpilThread.c
app/example_template/: CMakeLists.txt  app.c  app.h  main.c  readme.md
app/fs_buck_boost/: CMakeLists.txt  fsbuckboost.c  fsbuckboostConfig.h  fsbuckboostControlBoostEnergy.c  fsbuckboostControlDisabled.c  fsbuckboostControlDisabled.h  fsbuckboostControlIdle.c  fsbuckboostControlRamp.c  fsbuckboostControlSfb.c  fsbuckboostControlSfb.h  fsbuckboostControlStartup.c  fsbuckboostControlStartup.h  fsbuckboostController.c  fsbuckboostHw.c  fsbuckboostHw.h  fsbuckboostHwIf.c  fsbuckboostHwIf.h  fsbuckboostHwOpil.c  fsbuckboostHwOpil.h  fsbuckboostOpil.c
controller/: CMakeLists.txt  controller.c  controller.h  controllerIf.c  controllerIf.h
controlsys/: CMakeLists.txt  control.h  controlsys.c  controlsys.h
cpu0/: main.c
cpu0/tasks/: blink.c  uiface.c
demos/: readme.md
demos/example_controller/: CMakeLists.txt  main.c  ocpConfig.h  readme.md
demos/example_controller/app/: appConfig.h  appController.c  appHw.c  appHw.h
demos/example_intro/: CMakeLists.txt  appController.c  main.c  readme.md
demos/example_multiple_controllers/: CMakeLists.txt  main.c  ocpConfig.h  python_ex_multiple_controllers.py  readme.md  stypes.h
demos/example_multiple_controllers/app/: app.c  appController.c  appController.h  appControllerCascaded.c  appControllerCascaded.h  appControllerSfb.c  appControllerSfb.h  appHw.c  appOpil.c
demos/example_multiple_controllers/buck/: controllers.py  iface.py
demos/example_multiple_controllers/plecs/: buck_opil.m  buck_opil.plecs
demos/example_multiple_controllers/threads/: CMakeLists.txt  ocpIfLinuxThread.c  ocpIfWinThread.c
hardware/win/: ocpWin.c
hardware/zynq/: afeHwZynq.c  ocpZynqCpu0.c  ocpZynqCpu1.c  zynqConfig.h
ipc/: ipcClient.c  ipcClient.h  ipcServer.c  ipcServer.h
ocp/: CMakeLists.txt  ocpCS.c  ocpCS.h  ocpConfig.h  ocpIf.c  ocpIf.h  ocpOpil.c  ocpOpil.h  ocpPlatform.c  ocpPlatform.h  ocpTrace.c  ocpTrace.h
python/: .gitignore  setup.py
python/examples/: ex_boost.py  ex_buck.py  ex_buck_pyocp.py  ex_comm.py  ex_fsbuckboost_pyocp.py
python/lrssoc/boost/: boost.py  boost_controller.py  boost_hw.py  boost_plot.py  boost_trace.py
python/lrssoc/buck/: __init__.py  buck.py  buck_controller.py  buck_hw.py  buck_plot.py  buck_trace.py
python/lrssoc/controller/: controller.py
python/lrssoc/cuk/: cuk.py  cuk_controller.py
python/lrssoc/ocp/: iface.py
python/pyocp/: __init__.py  controller.py  data_mng_util.py  hwc.py  hwp.py  ocp.py  trace.py
python/pyocp/buck/: buck_controller.py
python/pyocp/gui/: __init__.py  main.py  trace.py
python/pyocp/lrs/: __init__.py
python/pyocp/lrs/cuk/: __init__.py  controllers.py  exp.py
python/pyocp/lrs/fsbuckboost/: __init__.py  controllers.py  hw.py  iface.py
rp/: CMakeLists.txt  rp.c  rp.h
trace/: CMakeLists.txt  ctrace.c  ctrace.h  ctrace_circBuf.c  ctrace_circBuf.h  ctrace_mem.c  ctrace_mem.h
utils/: dfilt.c  dfilt.h
utils/demo_threads/: CMakeLists.txt  ocpIfLinuxThread.c  ocpIfThread.h  ocpIfWinThread.c  ocpOpilThread.c
